--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "awsm"
   ],
   "scripts": {
-    "start": "frontity serve --port $PORT",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "dev": "frontity dev",
-    "build": "frontity build",
     "serve": "frontity serve"
   },
+  
   "homepage": "https://github.com/awsmin/f1#readme",
   "license": "GPL-2.0-or-later",
   "author": "Awsm Innovations",
