--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "frontity",
     "awsm"
   ],
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
