--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "frontity serve --port $PORT",
     "dev": "frontity dev",
+    "build": "frontity build",
     "serve": "frontity serve"
   },
   "homepage": "https://github.com/awsmin/f1#readme",
@@ -36,7 +36,6 @@
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-player": "^2.10.1",
-    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
     "react-share": "^4.4.0",
     "react-slick": "^0.26.1",
